--- a/VQVAE.html
+++ b/VQVAE.html
@@ -358,7 +358,7 @@ window.Quarto = {
 <div aria-describedby="fig-encode-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
-<p><a href="VQVAE_files/figure-html/cell-8-1-image.png" class="lightbox" data-gallery="quarto-lightbox-gallery-2" title="Visualisation of what the encoder is doing [@dumakude2023automated_image]"><img src="VQVAE_files/figure-html/cell-8-1-image.png" class="img-fluid figure-img"></a></p>
+<p><a href="assets/encode.png" class="lightbox" data-gallery="quarto-lightbox-gallery-2" title="Visualisation of what the encoder is doing [@dumakude2023automated_image]"><img src="assets/encode.png" class="img-fluid figure-img"></a></p>
 <figcaption>Visualisation of what the encoder is doing <span class="citation" data-cites="dumakude2023automated_image">(<a href="#ref-dumakude2023automated_image" role="doc-biblioref">Dumakude and Ezugwu 2023</a>)</span></figcaption>
 </figure>
 </div>
